improvements for small screens

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -71,6 +71,7 @@
     background-color: $primary-color;
     padding-right: 3rem;
     z-index: 2;
+    overflow: hidden;
 
     nav li {
       border: none;
