--- a/src/styles/components/_sections.scss
+++ b/src/styles/components/_sections.scss
@@ -28,10 +28,10 @@
 }
 @media screen and (max-width: $mobile) {
   .section .description {
-    margin: 0.5rem;
-    padding: 0.75rem 0.75rem;
+    margin: 0;
+    padding: 0.75rem 0rem;
     p {
-      font-size: large;
+      font-size: 1.2rem;
     }
   }
 }
