analytics installed, alt prop completed

--- a/src/styles/global/_resets.scss
+++ b/src/styles/global/_resets.scss
@@ -1,8 +1,7 @@
 body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 *,
 *:before,
@@ -10,4 +9,11 @@ body {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+}
+button {
+  background-color: inherit;
+  font-size: inherit;
+  border: none;
+  box-shadow: none;
+  @include hoverLinks;
 }
