--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -96,7 +96,7 @@
       justify-content: center;
       flex-direction: column;
       padding-right: 0;
-      & a {
+      & .nav-btn {
         @include linkWithIcon($secondary-color, $neon-blue);
         & .icon {
           width: 3rem;
