--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -28,7 +28,6 @@ $main-font: 'Poppins';
 }
 @mixin hoverLinks {
   transform: scale(1.1);
-  //color: $secondary-color-accent;
 }
 
 @mixin borderTags($color, $width) {
@@ -71,7 +70,8 @@ h2 {
   font-size: 2rem;
 }
 
-a {
+a,
+.nav-btn {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
