projects list - title centered

--- a/src/styles/components/_projects-list.scss
+++ b/src/styles/components/_projects-list.scss
@@ -62,6 +62,7 @@ h1#portfolio {
 
       & .project-title {
         text-shadow: 0rem 0rem 1rem $primary-color;
+        text-align: center;
       }
     }
 
