--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -13,3 +13,11 @@
     }
   }
 }
+.icon {
+
+        @include linkWithIcon($secondary-color, $neon-blue);
+
+      justify-self: center;
+      width: 1.75em;
+      // height: 1.75em;
+    }
