--- a/src/styles/components/_projects-list.scss
+++ b/src/styles/components/_projects-list.scss
@@ -3,12 +3,13 @@ h1#portfolio {
   padding-top: 3rem;
 }
 .projects-list {
-  width: 100%;
+  // width: 100%;
   padding: 3rem 0.5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 320px));
   grid-gap: 3rem;
   justify-items: center;
+  justify-content: center;
 
   & a.project {
     position: relative;
@@ -43,6 +44,8 @@ h1#portfolio {
       border-radius: 50%;
       flex-direction: column;
       @include flexCenter;
+      justify-content: space-between;
+      padding: 3rem 1rem;
       &.pastelgreen {
         background-color: rgba($pastelgreen, 0.7);
       }
