--- a/src/styles/components/_projects-list.scss
+++ b/src/styles/components/_projects-list.scss
@@ -3,7 +3,7 @@ h1#portfolio {
   padding-top: 3rem;
 }
 .projects-list {
-  // width: 100%;
+  width: 100%;
   padding: 3rem 0.5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 320px));
