--- a/src/styles/components/_start.scss
+++ b/src/styles/components/_start.scss
@@ -1,6 +1,6 @@
 #start {
   position: relative;
-  background-color: rgba(0, 0, 0, 0);
+  // background-color: rgba(0, 0, 0, 0);
   h1,
   h2 {
     mix-blend-mode: difference;
